# code_x

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_web.py  setup.py
attached_assets/: file_manager.py  guide.txt  repo_query.txt
components/: chat.py  file_explorer.py  file_manager.py  sidebar.py  unified_file_explorer.py
models/: ai_models.py  embeddings.py
styles/: main.css
ui/: __init__.py  streamlit_ui.py
ui/web_ui/: __init__.py  app.py
ui/web_ui/static/css/: style.css  styles.css
ui/web_ui/static/js/: app.js  dashboard.js  login.js  repo_chat.js
ui/web_ui/templates/: base.html  dashboard.html  database_chat.html  documents_chat.html  index.html  login.html  register.html  repo_chat.html  repository_chat.html
utils/: file_readers.py  parallel_processor.py  repo_handler.py  vector_store.py
